rectif