@@ -1,6 +1,7 @@
 package sms.back_end.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -12,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import sms.back_end.dto.InfobipInfoDTO;
-import sms.back_end.dto.InfobipInfoRequest;
 import sms.back_end.entity.InfobipInfo;
 import sms.back_end.service.InfobipInfoService;
 
@@ -26,41 +26,30 @@ public class InfobipInfoController {
         this.service = service;
     }
 
-    // CREATE
     @PostMapping
-    public InfobipInfoDTO create(@RequestBody InfobipInfoRequest request) {
-        InfobipInfo info = new InfobipInfo();
-        info.setApiKey(request.getApiKey());
-        info.setBaseUrl(request.getBaseUrl());
-        InfobipInfo saved = service.createInfobipInfo(info, request.getIdNumero());
+    public InfobipInfoDTO create(@RequestBody InfobipInfo info) {
+        InfobipInfo saved = service.createInfobipInfo(info);
         return new InfobipInfoDTO(saved);
     }
 
-    // READ ALL
     @GetMapping
     public List<InfobipInfoDTO> getAll() {
         return service.getAll().stream()
                       .map(InfobipInfoDTO::new)
-                      .toList();
+                      .collect(Collectors.toList());
     }
 
-    // READ BY ID
     @GetMapping("/{id}")
     public InfobipInfoDTO getById(@PathVariable Long id) {
         return new InfobipInfoDTO(service.getById(id));
     }
 
-    // UPDATE
     @PutMapping("/{id}")
-    public InfobipInfoDTO update(@PathVariable Long id, @RequestBody InfobipInfoRequest request) {
-        InfobipInfo info = new InfobipInfo();
-        info.setApiKey(request.getApiKey());
-        info.setBaseUrl(request.getBaseUrl());
-        InfobipInfo updated = service.update(id, info, request.getIdNumero());
-        return new InfobipInfoDTO(updated);
+    public InfobipInfoDTO update(@PathVariable Long id, @RequestBody InfobipInfo updated) {
+        InfobipInfo saved = service.update(id, updated);
+        return new InfobipInfoDTO(saved);
     }
 
-    // DELETE
     @DeleteMapping("/{id}")
     public String delete(@PathVariable Long id) {
         service.delete(id);
